fix text wrap on pending reviews
closes #60

--- a/src/admin/css/app.css
+++ b/src/admin/css/app.css
@@ -1,6 +1,7 @@
 
 p.content {
-    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 
